--- a/elsarticle-template-1-num.tex
+++ b/elsarticle-template-1-num.tex
@@ -57,9 +57,14 @@
 %% provided with \biboptions{...} command. Following options are
 %% valid:
 
+\usepackage{bm}
+
 %Griffiths' uses this script r for the separation vector. 
 
-\def\rcurs{{\mbox{$\resizebox{.09in}{.08in}{\includegraphics[trim= 1em 0 14em 0,clip]{images/ScriptR.pdf}}$}}}
+\def\r{{\mbox{$\resizebox{.09in}{.08in}{\includegraphics[trim= 1em 0 14em 0,clip]{images/ScriptR.pdf}}$}}}
+
+\def\br{{\mbox{$\resizebox{.09in}{.08in}{\includegraphics[trim= 1em 0 14em 0,clip]{images/BoldR.pdf}}$}}}
+\def\hr{{\mbox{$\hat \br$}}}
 
 %For use in electrodynamics instead of having to write out these prefactors every time
 
@@ -67,6 +72,8 @@
 \def\m{\frac{\mu_0}{4\pi}}
 \def\x{\times}
 \def\.{\cdot}
+\def\b{\textbf}
+\def\bell{\bm{\ell}}
 
 %%   round  -  round parentheses are used (default)
 %%   square -  square brackets are used   [option]
@@ -155,7 +162,7 @@ I will be skipping mathematical introductions as I will consolidate all of that 
 The basic approach to electrostatics involves Coulomb's law,
 
 \begin{equation}
-    \vec{F} = \k\frac{qQ}{\rcurs^2}\hat{\rcurs}.
+    \b{F} = \k\frac{qQ}{\r^2}\hr.
 \end{equation}
 
 This approach deals with source charges, which are point like objects that carry some charge, q. $\epsilon_0$ is the permittivity of free space, equal to $8.85 \x 10^{-12} \frac{C^2}{N \. m^2}$. This equation is more or less postulating and then checked via experiment. Lets use this as one of our postulates of electrostatics. Once we move to electrodynamics this can be derived from Maxwell's equations. Because this equation is linear with respect to q or Q, then the law of superposition can be used when calculating out the total force on a particular charge.
@@ -163,13 +170,13 @@ This approach deals with source charges, which are point like objects that carry
 Another fundamental equation of electrostatics is the definition of the electric field, 
 
 \begin{equation}
-    \vec{F} \equiv q\vec{E}.
+    \b{F} \equiv q\b{E}.
 \end{equation}
 
 So combining what we have so far, the electric field for electrostatics is equal to,
 
 \begin{equation}
-    \vec{E}(\vec{r}) = \frac{1}{4 \pi \epsilon_0} \sum_{i=1}^n \frac{q_i}{\rcurs^2} \hat{\rcurs}
+    \b{E}(\b{r}) = \frac{1}{4 \pi \epsilon_0} \sum_{i=1}^n \frac{q_i}{\r^2} \hr
 \end{equation}
 
 This equation can be useful for a small amount of charges, or some very symmetrical cases but for a lot of what is done in electrostatics, you will be facing continuous charge distributions rather than this discrete form.
@@ -180,7 +187,7 @@ This equation can be useful for a small amount of charges, or some very symmetri
 To deal with continuous charge distributions we have to switch out the summation for an integral and what we are left with is,
 
 \begin{equation}
-    \vec{E}(\vec{r}) = \k \int \frac{1}{\rcurs^2}\hat{\rcurs}dq.
+    \b{E}(\b{r}) = \k \int \frac{1}{\r^2}\hr dq.
 \end{equation}
 
 That dq though can be a tricky thing to establish. Usually instead of a dq, you would want it in terms of a distance. We can rewrite dq for the one-dimensional case to be equal to $\frac{dq}{dl} dl$. In problems $\frac{dq}{dl}$ is normally given to you as the linear charge distribution $\lambda$. Similarly for two-dimensions and three-dimensions we have $dq = \frac{dq}{da}da$ and $dq = \frac{dq}{d\tau}d\tau$ respectively. $\frac{dq}{da}$ is normally given as the surface charge density $\sigma$ and $\frac{dq}{d\tau}$ is normally given as the volume charge density $\rho$.
@@ -189,7 +196,7 @@ That dq though can be a tricky thing to establish. Usually instead of a dq, you 
 An example, is if you have a long wire, the electric field produced by it would be equal to,
 
 \begin{equation}
-    \vec{E}(z) = \k \frac{2\lambda}{z} \hat{z}.
+    \b{E}(z) = \k \frac{2\lambda}{z} \hat{\b z}.
 \end{equation}
 
 The equations for a sphere and plane will be worked out by me later and added.
@@ -199,19 +206,19 @@ The equations for a sphere and plane will be worked out by me later and added.
 One of the staples of the theory of electrodynamics is Gauss's law which relates the Electric flux to the enclosed charge. Electric flux is defined by
 
 \begin{equation}
-    \Phi_E \equiv \int_S \vec{E}\. d\vec{a}.
+    \Phi_E \equiv \int_S \b{E}\. d\b{a}.
 \end{equation}
 
 Gauss's law states that the electric flux is related to the charge enclosed by
 
 \begin{equation}
-    \oint \vec{E}\. d\vec{a} = \frac{Q_{enc}}{\epsilon_0}.
+    \oint \b{E}\. d\b{a} = \frac{Q_{enc}}{\epsilon_0}.
 \end{equation}
 
 From this integral equation we can derive a differential equation,
 
 \begin{equation}
-    \nabla \. \vec{E} = \frac{\rho}{\epsilon_0},
+    \nabla \. \b{E} = \frac{\rho}{\epsilon_0},
 \end{equation}
 
 which is also called Gauss's law. 
@@ -219,13 +226,13 @@ which is also called Gauss's law.
 Useful results that can be calculated from Gauss's law are uniformly charged symmetrical objects. The electric field for a uniformly charged sphere is,
 
 \begin{equation}
-    \vec{E}= \frac{1}{4 \pi \epsilon_0} \frac{q}{r^2}\hat{r}.
+    \b{E}= \frac{1}{4 \pi \epsilon_0} \frac{q}{r^2}\hat{\b r}.
 \end{equation}
 
 For a uniformly charged plane the electric field is,
 
 \begin{equation}
-    \vec{E} = \frac{\sigma}{2\epsilon_0}\hat{n}.
+    \b{E} = \frac{\sigma}{2\epsilon_0}\hat{\b n}.
 \end{equation}
 
 \subsection{Conservative Force}
@@ -233,19 +240,19 @@ For a uniformly charged plane the electric field is,
 Faraday's law states that for electrostatics, the electric force is conservative. In differential form this means that
 
 \begin{equation}
-    \nabla \x \vec{E} = 0,
+    \nabla \x \b{E} = 0,
 \end{equation}
 
 and in integral form,
 
 \begin{equation}
-    \oint \vec{E} \. d\vec{l} = 0.
+    \oint \b{E} \. d\b{l} = 0.
 \end{equation}
 
 I would like to note that this does not hold for electrodynamics though which will be covered later. Because the electric field is a conservative force we can define a potential to be,
 
 \begin{equation}
-    \vec{E} \equiv -\nabla \phi,
+    \b{E} \equiv -\nabla \phi,
 \end{equation}
 
 where $\phi$ is the electric potential or scalar potential. This potential is sometimes denoted by V instead of $\phi$ such as in Griffith's textbook.
@@ -253,7 +260,7 @@ where $\phi$ is the electric potential or scalar potential. This potential is so
 The integral form of this is
 
 \begin{equation}
-    \phi(\vec{r}) = - \int_O^r \vec{E}\. d\vec{l},
+    \phi(\b{r}) = - \int_O^r \b{E}\. d \bell.
 \end{equation}
 
 Where O is some reference point. O is normally where one defines the zero of the potential and is frequently at infinity. A case where this does not apply is the uniform plane where the electric field is not zero at infinity. 
@@ -277,7 +284,7 @@ But what happens if we plug the potential into Faraday's law. What results is es
 Since the potential is useful quantity, we should have equations that allow us to solve for it that do not depend on the electric field. Taking the equation for a continuous charge distribution in three dimensions and substituting in the definition of the potential results in
 
 \begin{equation}
-    \phi(\vec{r}) = \k \int \frac{\rho(\vec{r'})}{\rcurs}d\tau'.
+    \phi(\b{r}) = \k \int \frac{\rho(\b{r'})}{\r}d\tau'.
 \end{equation}
 
 Sometimes it is quicker to derive the potential using this equation and then the field from that rather than jumping to the field directly. 
@@ -305,7 +312,7 @@ The potential on the other hand does not have jump discontinuities because if it
 I have used the notation of a normal derivative without explaining it yet. The $\frac{\partial \phi}{\partial n}$ is a normal derivative and is defined as such
 
 \begin{equation}
-    \frac{\partial \phi}{\partial n} = \nabla \phi \. \hat{n},
+    \frac{\partial \phi}{\partial n} = \nabla \phi \. \hat{\b n},
 \end{equation}
 
 where $\hat{n}$ is the normal to the boundary. 
@@ -316,19 +323,19 @@ where $\hat{n}$ is the normal to the boundary.
 The work it takes to move a charge from point a to point b is given by can be derived from the definition of work which is,
 
 \begin{equation}
-    W \equiv \int_a^b \vec{F}\. d\vec{l}.
+    W \equiv \int_a^b \b{F}\. d\bell.
 \end{equation}
 
 Taking it from there and substituting the previous discussions ideas results in
 
 \begin{equation}
-    W = q[\phi(\vec{b})-\phi(\vec{a})]
+    W = q[\phi(\b{b})-\phi(\b{a})]
 \end{equation}
 
-Now let b be an arbitrary vector $\vec{r}$ and let a be the reference point for where the potential is equal to zero. Then the work function takes on a different meaning and is just the potential energy of the system. Algebraically this means,
+Now let b be an arbitrary vector $\b{r}$ and let a be the reference point for where the potential is equal to zero. Then the work function takes on a different meaning and is just the potential energy of the system. Algebraically this means,
 
 \begin{equation}
-    U = q\phi(\vec{r}),
+    U = q\phi(\b{r}),
 \end{equation}
 
 where U is the potential energy of the system of this single particle.
@@ -336,7 +343,7 @@ where U is the potential energy of the system of this single particle.
 For a collection of particles the the potential energy is
 
 \begin{equation}
-    U = \frac{1}{2}\sum_{i=1}^n q_i \phi(\vec{r}_i).
+    U = \frac{1}{2}\sum_{i=1}^n q_i \phi(\b{r}_i).
 \end{equation}
 
 The half comes from the fact that the sum double counts every interaction.
@@ -360,7 +367,7 @@ An example of applying these principles would be for a neutral conductor that ha
 Surface charges on a conductor will experience a force equal to 
 
 \begin{equation}
-    \vec{f} = \frac{\sigma^2}{2 \epsilon_0} \hat{n}.
+    \b{f} = \frac{\sigma^2}{2 \epsilon_0} \hat{\b n}.
 \end{equation}
 
 Therefore there is an outward electrostatic pressure on the pressure equal to
@@ -455,7 +462,7 @@ What is the potential for some $\rho \neq 0$ but $Q_{enc} = 0$? Well For cases o
 To start out with you would take the explicit formula for the potential would be 
 
 \begin{equation}
-    \phi(\vec{r}) = \frac{1}{4\pi \epsilon_0}(\frac{q}{r_+}+\frac{-q}{r_-}).
+    \phi(\b{r}) = \frac{1}{4\pi \epsilon_0}(\frac{q}{r_+}+\frac{-q}{r_-}).
 \end{equation}
 
 The next step is to expand out the $r_\pm$.
@@ -467,7 +474,7 @@ The next step is to expand out the $r_\pm$.
 By using Taylor expansions and other basic approximation techniques you should end up at
 
 \begin{equation}
-    \phi(\vec{r}) \cong \k \frac{qd\cos\theta}{r^2}
+    \phi(\b{r}) \cong \k \frac{qd\cos\theta}{r^2}
 \end{equation}
 
 A trick to see if your calculation is trick to see if your solution is correct, the potential should fall of like $\frac{1}{r^{n+1}}$ where n is the power of your pole. So for a hexadecapole, which is $2^4$ pole, then should fall off like $\frac{1}{r^5}$.
@@ -475,35 +482,35 @@ A trick to see if your calculation is trick to see if your solution is correct, 
 The general equation for the multipole expansion is
 
 \begin{equation}
-    \phi(\vec{r}) = \frac{1}{4\pi \epsilon_0} \sum_{n=0}^\infty \frac{1}{r^{n+1}} \int (r')^n P_n(\cos \alpha ) \rho(\vec{r')}d\tau'.
+    \phi(\b{r}) = \frac{1}{4\pi \epsilon_0} \sum_{n=0}^\infty \frac{1}{r^{n+1}} \int (r')^n P_n(\cos \alpha ) \rho(\b{r}')d\tau'.
 \end{equation}
 
 
 Explicitly writing out the monopole and dipole terms,
 
 \begin{equation}
-    \phi_{mon}(\vec{r}) = \k \frac{Q}{r},
+    \phi_{mon}(\b{r}) = \k \frac{Q}{r},
 \end{equation}
 
 and,
 
 \begin{equation}
-    \phi_{dip}(\vec{r}) = \frac{1}{4 \pi \epsilon_0}\frac{1}{r^2}\hat{r}\. \int \vec{r'}\rho(\vec{r'})d\tau'.
+    \phi_{dip}(\b{r}) = \frac{1}{4 \pi \epsilon_0}\frac{1}{r^2}\hat{r}\. \int \b{r'}\rho(\b{r'})d\tau'.
 \end{equation}
 
 In the dipole term, the integral is called the dipole moment, and is defined as
 
 \begin{equation}
-    \vec{p} \equiv \int\vec{r'} \rho(\vec{r'})d\tau'.
+    \b{p} \equiv \int\b{r'} \rho(\b{r'})d\tau'.
 \end{equation}
 
 Using this definition we can rewrite the dipole's contribution as
 
 \begin{equation}
-    \phi_{dip}(\vec{r}) = \k\frac{\vec{p}\. \hat{r}}{r^2}.
+    \phi_{dip}(\b{r}) = \k\frac{\b{p}\. \hat{\b r}}{r^2}.
 \end{equation}
 
-Note that for physical dipoles, $\vec{p} = q\vec{d}$ where $\vec{d}$ is the separation vector between the positive and negative points.
+Note that for physical dipoles, $\b{p} = q\b{d}$ where $\b{d}$ is the separation vector between the positive and negative points.
 
 \section{Electric Fields in Matter}
 
@@ -512,50 +519,50 @@ Note that for physical dipoles, $\vec{p} = q\vec{d}$ where $\vec{d}$ is the sepa
 When a neutral object such as an atom in placed into an electric field, the electrons are pushed in one direction while the nucleus is pulled in the opposite. Even though the overall charge is neutral, the atom now becomes a dipole. This is what we mean when we say an electric field induces a dipole. When this happens we say the atom is polarized. If the field is not too strong the dipole moment is proportional to the field,
 
 \begin{equation}
-    \vec{p} = \alpha \vec{E}.
+    \b{p} = \alpha \b{E}.
 \end{equation}
 
 The proportionality constant $\alpha$ is called the atomic polarizability, which is a measured quantity. For a more general case, $\alpha$ is not a scalar but actually a tensor called the polarizability tensor.  
 
 
-What about for polar molecules? Well if a molecule already has some polarization $\vec{p}$ then it will experience a torque when placed inside the external electric field. This torque is equal to 
+What about for polar molecules? Well if a molecule already has some polarization $\b{p}$ then it will experience a torque when placed inside the external electric field. This torque is equal to 
 
 \begin{equation}
-    \vec{N} = \vec{p} \x \vec{E}.
+    \b{N} = \b{p} \x \b{E}.
 \end{equation}
 
-This torque forces $\vec{p}$ to be in the same direction as $\vec{E}$. If the field is not uniform there exists a net force on the object equal to 
+This torque forces $\b{p}$ to be in the same direction as $\b{E}$. If the field is not uniform there exists a net force on the object equal to 
 
 \begin{equation}
-    \vec{F} = (\vec{p} \. \nabla)\vec{E}.
+    \b{F} = (\b{p} \. \nabla)\b{E}.
 \end{equation}
 
 The energy of an ideal dipole in an external electric field is
 
 \begin{equation}
-    U = - \vec{p} \. \vec{E}.
+    U = - \b{p} \. \b{E}.
 \end{equation}
 
 \subsection{Polarization}
 
-So if you put a dielectric material in an electric field, what will happen is that each molecule in the material will become polarized with a polarization $\vec{p}$. When examining the bulk material it is easier to look at the dipole moment per unit volume, $\vec{P}$, or polarization.
+So if you put a dielectric material in an electric field, what will happen is that each molecule in the material will become polarized with a polarization $\b{p}$. When examining the bulk material it is easier to look at the dipole moment per unit volume, $\b{P}$, or polarization.
 
 To answer the question of what type of field this produces, we need to define a surface charge density and a volume charge density. Let the surface charge density be defined as 
 
 \begin{equation}
-    \sigma_b \equiv \vec{P} \. \hat{n},
+    \sigma_b \equiv \b{P} \. \hat{\b n},
 \end{equation}
 
 and the volume charge density defined as,
 
 \begin{equation}
-    \rho_b \equiv - \nabla \. \vec{P}.
+    \rho_b \equiv - \nabla \. \b{P}.
 \end{equation}
 
 Using these definitions, and the formula for the potential defined earlier, you can derive
 
 \begin{equation}
-    \phi(\vec{r}) = \k\oint_S \frac{\sigma_b}{\rcurs}da' + \k \int_v \frac{\rho_b}{\rcurs}d\tau'.
+    \phi(\b{r}) = \k\oint_S \frac{\sigma_b}{\r}da' + \k \int_v \frac{\rho_b}{\r}d\tau'.
 \end{equation}
 
 So to calculate the potential, and thus the electric field, all one needs to do is examine what happens to the bound charges. What is a bound charge though? Is it math or a physical reality. Well as Griffiths puts it, "there is nothing further from the truth" than viewing these bound charges as mathematical constructs. It is called bound charges because they can not be removed from their source unlike a metal. They are a bulk feature, of many dipoles cancelling each other out and just looking at what the overall effect is. 
@@ -571,25 +578,25 @@ So now we want to examine how the field due to bound charges interacts with ever
 Now incorporating this definition into Gauss's law leads to
 
 \begin{equation}
-    \epsilon_0 \nabla \. \vec{E} = - \nabla \. \vec{P} + \rho_f
+    \epsilon_0 \nabla \. \b{E} = - \nabla \. \b{P} + \rho_f
 \end{equation}
 
 Defining a new variable, the electric displacement,
 
 \begin{equation}
-    \vec{D} \equiv \epsilon_0 \vec{E} + \vec{P},
+    \b{D} \equiv \epsilon_0 \b{E} + \b{P},
 \end{equation}
 
 then allows us to rearrange the equation to be,
 
 \begin{equation}
-    \nabla \. \vec{D} = \rho_f.
+    \nabla \. \b{D} = \rho_f.
 \end{equation}
 
 The integral form of this is
 
 \begin{equation}
-    \oint \vec{D} \. d\vec{a}= Q_{f_{enc}}
+    \oint \b{D} \. d\b{a}= Q_{f_{enc}}
 \end{equation}
 
 Boundary conditions for the electric displace are as follows,
@@ -599,7 +606,7 @@ Boundary conditions for the electric displace are as follows,
 \end{equation}
 
 \begin{equation}
-    \vec{D}_{above}^\parallel - \vec{D}_{below}^\parallel = \vec{P}_{above}^\parallel - \vec{P}_{below}^\parallel.
+    \b{D}_{above}^\parallel - \b{D}_{below}^\parallel = \b{P}_{above}^\parallel - \b{P}_{below}^\parallel.
 \end{equation}
 
 \subsection{Dielectrics}
@@ -607,13 +614,13 @@ Boundary conditions for the electric displace are as follows,
 Just like in the atomic case, when an electric field, which is not too strong, is applied to some materials, then the polarization is proportional to the field,
 
 \begin{equation}
-    \vec{P} = \epsilon_0 \chi_e \vec{E}.
+    \b{P} = \epsilon_0 \chi_e \b{E}.
 \end{equation}
 
 The new proportionality constant $\chi_e$ is called the electric susceptibility, and if a material obeys this equation it is called a linear dielectric. If we were to convert the equation for electric displacement with this equation, then we would derive 
 
 \begin{equation}
-    \vec{D} = \epsilon_0 (1+\chi_e)\vec{E} = \epsilon \vec{E}.
+    \b{D} = \epsilon_0 (1+\chi_e)\b{E} = \epsilon \b{E}.
 \end{equation}
 
 This new constant of proportionality, $\epsilon$, is called the permittivity of the material. From this we can define can also define a new variable, the relative permittivity ( or dielectric constant ), 
@@ -633,7 +640,7 @@ For homogeneous linear isotropic materials, the bound charge density can be rela
 To compute the energy in a dielectric system, applying the definitions applied above, simplifies the equation down to
 
 \begin{equation}
-    U = \frac{1}{2}\int \vec{D}\. \vec{E}d\tau.
+    U = \frac{1}{2}\int \b{D}\. \b{E}d\tau.
 \end{equation}
 
 This equation ONLY works for linear homogeneous isotropic dielectrics though.
@@ -651,13 +658,13 @@ For the special case of a finite parallel plate capacitor, with separation d, an
 For electrostatics we required stationary charges, and for magnetostatics we will require steady currents.. The fundamental force law of magnetostatics is called the Lorentz force law. This law was experimentally found so I will write it as a definition,
 
 \begin{equation}
-    \vec{F}_{mag} \equiv q(\vec{v} \x \vec{B}).
+    \b{F}_{mag} \equiv q(\b{v} \x \b{B}).
 \end{equation}
 
 Combining this with the definition of the electric field results in the full electrodynamics force equation,
 
 \begin{equation}
-    \vec{F} = q(\vec{E} + \vec{v} \x \vec{B}).
+    \b{F} = q(\b{E} + \b{v} \x \b{B}).
 \end{equation}
 
 The v in this equation is the velocity of the particle moving. I guess I should say now that the "magnetic forces do no work" just to go ahead and get that out of the way. Since they do no work, the motion of a particle under just a magnetic force is a circle. Thus using equation the magnetic force to the centripetal force you can get the cyclotron formula,
@@ -675,25 +682,25 @@ The cyclotron frequency is thus
 Another way of rewriting the Lorentz law in terms of current
 
 \begin{equation}
-    \vec{F}_{mag} = I \vec{\ell} \x \vec{B}.
+    \b{F}_{mag} = I \bell \x \b{B}.
 \end{equation}
 
 Instead of just talking about one dimensional currents, there are two dimensional surface currents, and three dimensional volume currents. For two dimensional currents we define them as
 
 \begin{equation}
-    \vec{K} \equiv \frac{d\vec{I}}{d\ell_\bot} = \sigma \vec{v},
+    \b{K} \equiv \frac{d\b{I}}{d\ell_\bot} = \sigma \b{v},
 \end{equation}
 
 and for three dimensional currents,
 
 \begin{equation}
-    \vec{J} \equiv \frac{d\vec{I}}{da_\bot} =\rho \vec{v}.
+    \b{J} \equiv \frac{d\b{I}}{da_\bot} =\rho \b{v}.
 \end{equation}
 
 The continuity equation stemming from charge conservation is
 
 \begin{equation}
-    \nabla \. \vec{J} = - \frac{\partial \rho}{\partial t}.
+    \nabla \. \b{J} = - \frac{\partial \rho}{\partial t}.
 \end{equation}
 
 \subsection{Biot-Savart Law}
@@ -701,21 +708,21 @@ The continuity equation stemming from charge conservation is
 The Biot-Savart law is
 
 \begin{equation}
-    \vec{B}(\vec{r}) = \m \int \frac{\vec{I} \x \hat{\rcurs}}{\rcurs^2}dl' = \m I \int \frac{d\vec{l'} \x \hat{\rcurs}}{\rcurs^2}.
+    \b{B}(\b{r}) = \m \int \frac{\b{I} \x \hat{\r}}{\r^2}dl' = \m I \int \frac{d\bell \x \hr}{\r^2}.
 \end{equation}
 
-Here I have introduced a new constant, $\mu_0$, which is called the permeability of free space. Unless you are trying to be more precise than $10^{-16}$, you can simply use $\mu_0 = 4\pi \x 10^{-7}$.
+Here I have introduced a new constant, $\mu_0$, which is called the permeability of free space. Unless you are trying to be more precise than $10^{-16}$, you can simply use $\mu_0 = 4\pi \x 10^{-7} \frac{H}{m}$.
 
 An example of using this would be finding the magnetic field a distance s from a long straight wire that has a current I. The magnetic field is then,
 
 \begin{equation}
-    \vec{B} = \frac{\mu_0I}{2\pi s}\hat{\phi}.
+    \b{B} = \frac{\mu_0I}{2\pi s}\hat{\bm\phi}.
 \end{equation}
 
 Another common example is to find the magnetic field a distance z above the center of a circular loop of radius R, carrying a steady current I. In this case the magnetic field is
 
 \begin{equation}
-    \vec{B}(\vec{z}) = \frac{\mu_0I}{2} \frac{R^2}{(R^2+z^2)^\frac{3}{2}}\hat{z}.
+    \b{B}(\b{z}) = \frac{\mu_0I}{2} \frac{R^2}{(R^2+z^2)^\frac{3}{2}}\hat{\b z}.
 \end{equation}
 
 \subsection{Ampere's Law}
@@ -723,13 +730,13 @@ Another common example is to find the magnetic field a distance z above the cent
 So we have arrived at another of Maxwell's equations, Ampere's law. Maxwell will add a correction to this equation later on but in the magnetostatics case Ampere's law works just fine. Ampere's law is analogous to Gauss's law for magnetostatics. Written in integral form it is,
 
 \begin{equation}
-    \oint \vec{B} \. d\vec{l} = \mu_0 I_{enc},
+    \oint \b{B} \. d\b{l} = \mu_0 I_{enc},
 \end{equation}
 
 while written in differential form is,
 
 \begin{equation}
-    \nabla \x \vec{B} = \mu_0 \vec{J}.
+    \nabla \x \b{B} = \mu_0 \b{J}.
 \end{equation}
 
 Like Gaussian surfaces, these one dimensional loops are called Amperian loops. This is one of the staples of magnetostatics to be able to calculate the magnetic field due to some current. 
@@ -737,29 +744,29 @@ Like Gaussian surfaces, these one dimensional loops are called Amperian loops. T
 Now the divergence of the magnetic field is fairly simple, simpler in fact than the electrostatics case. This is also one of Maxwell's equations, and is
 
 \begin{equation}
-    \nabla \. \vec{B} = 0.
+    \nabla \. \b{B} = 0.
 \end{equation}
 
 All this is saying is that in nature, there does not exist magnetic point charges, i.e. magnetic monopoles. 
 
 \subsection{Magnetic Vector Potential}
 
-For electrostatics we took advantage of the fact that $\nabla \x \vec{E} = 0$ to define a scalar potential. Now for magnetostatics we will take advantage of $\nabla \. \vec{B} = 0$ to define a vector potential. Vector calculus identities allow us to define a vector such that,
+For electrostatics we took advantage of the fact that $\nabla \x \b{E} = 0$ to define a scalar potential. Now for magnetostatics we will take advantage of $\nabla \. \b{B} = 0$ to define a vector potential. vector calculus identities allow us to define a vector such that,
 
 \begin{equation}
-    \vec{B} = \nabla \x \vec{A}.
+    \b{B} = \nabla \x \b{A}.
 \end{equation}
 
 One of the features of this vector potential is that we can define it in such a way that it is divergenceless. Now this is picking a particular gauge is called the Coulomb gauge, or radiation gauge. What is this gauge I'm referencing? Well a gauge is just a systematic way to set a fixed point in a potential, usually the zero. There are other gauges, such as the Lorenz gauge which can be useful for relativistic problems that we will explore later. Converting some of the previous equations into forms dependent on the vector potential we get,
 
 \begin{equation}
-    \nabla^2 \vec{A} = - \mu_0 \vec{J},
+    \nabla^2 \b{A} = - \mu_0 \b{J},
 \end{equation}
 
 and,
 
 \begin{equation}
-    \vec{A}(\vec{r)} = \m \int \frac{\vec{J(\vec{r'})}}{\rcurs}d\tau'.
+    \b{A}(\b{r)} = \m \int \frac{\b{J(\b{r'})}}{\r}d\tau'.
 \end{equation}
 
 \subsection{Boundary Conditions}
@@ -779,7 +786,7 @@ is the boundary condition for the perpendicular component of the magnetic field.
 This reminds me of the perpendicular portion of the electric field! The boundary conditions for the magnetic and electric fields essentially flipped versions of each other. To combine the magnetic field boundary equations into a single vector equation
 
 \begin{equation}
-    \vec{B}_{above} - \vec{B}_{below}= \mu_0 (\vec{K} \x \hat{n}).
+    \b{B}_{above} - \b{B}_{below}= \mu_0 (\b{K} \x \hat{\b n}).
 \end{equation}
 
 \subsection{Multipole Expansion}
@@ -787,25 +794,25 @@ This reminds me of the perpendicular portion of the electric field! The boundary
 Harking back to electrostatics again, the magnetic vector potential can be written in terms of a multipole expansion. To show what it looks like
 
 \begin{equation}
-    \vec{A}(\vec{r}) = \m I \sum_{n=0}^\infty \frac{1}{r^{n+1}}\oint (r')^n  P_n(\cos\alpha) d\ell '.
+    \b{A}(\b{r}) = \m I \sum_{n=0}^\infty \frac{1}{r^{n+1}}\oint (r')^n  P_n(\cos\alpha) d\bell '.
 \end{equation}
 
 Now something to note is that THERE IS NO MAGNETIC MONOPOLE as we stated earlier thus the first term always vanishes. So the first non-vanishing term is the dipole term which is
 
 \begin{equation}
-    \vec{A}_{dip}(\vec{r}) = \m \frac{\vec{m \x \hat{r}}}{r^2},
+    \b{A}_{dip}(\b{r}) = \m \frac{\b{m} \x \hat{\b r}}{r^2},
 \end{equation}
 
-where $\vec{m}$ is the magnetic dipole moment, which is defined to be
+where $\b{m}$ is the magnetic dipole moment, which is defined to be
 
 \begin{equation}
-    \vec{m} \equiv I\vec{a}.
+    \b{m} \equiv I\b{a}.
 \end{equation}
 
-$vec{a}$ is the vector area of the loop, which for most simple cases is $a\hat{n}$. From this we can derive what the magnetic field due to a dipole must be
+$b{a}$ is the vector area of the loop, which for most simple cases is $a\hat{n}$. From this we can derive what the magnetic field due to a dipole must be
 
 \begin{equation}
-    \vec{B}_{dip}(\vec{r}) = \m \frac{1}{r^3}[3(\vec{m} \. \hat{r})\hat{r} - \vec{m}].
+    \b{B}_{dip}(\b{r}) = \m \frac{1}{r^3}[3(\b{m} \. \hat{r})\hat{r} - \b{m}].
 \end{equation}
 
 
